# unpublished/docs/swagger.yaml
@@ -19,6 +19,10 @@ definitions:
       name:
         example: Jerk
         type: string
+      unpublishedBeat:
+        items:
+          $ref: '#/definitions/entities.UnpublishedBeat'
+        type: array
     type: object
   entities.Instrument:
     properties:
@@ -41,6 +45,14 @@ definitions:
       name:
         type: string
     type: object
+  entities.Status:
+    enum:
+    - processing
+    - draft
+    type: string
+    x-enum-varnames:
+    - StatusInModeration
+    - StatusDraft
   entities.Tag:
     properties:
       id:
@@ -66,6 +78,93 @@ definitions:
     required:
     - timeEnd
     - timeStart
+    type: object
+  entities.UnpublishedBeat:
+    description: entitites.UnpublishedBeatErrorResponse
+    properties:
+      availableFiles:
+        $ref: '#/definitions/entities.AvailableFiles'
+      beatmakerId:
+        example: 019628ef-cd76-7d2d-bf80-48b8011fad40
+        type: string
+      bpm:
+        example: 120
+        maximum: 400
+        minimum: 20
+        type: integer
+      created_at:
+        type: integer
+      description:
+        example: Chill summer beat with tropical influences
+        maxLength: 500
+        minLength: 2
+        type: string
+      err:
+        type: string
+      genres:
+        description: many to many
+        items:
+          $ref: '#/definitions/entities.Genre'
+        type: array
+      id:
+        example: 019628ef-cd76-7d2d-bf80-48b8011fad40
+        type: string
+      instruments:
+        description: many to many
+        items:
+          $ref: '#/definitions/entities.Instrument'
+        type: array
+      keynoteId:
+        description: keynote has many beats, but each beat has only one keynote`
+        example: 2
+        type: integer
+      moods:
+        description: many to many
+        items:
+          $ref: '#/definitions/entities.Mood'
+        type: array
+      name:
+        example: Summer Vibes
+        maxLength: 60
+        minLength: 2
+        type: string
+      picture:
+        example: https://storage.yandexcloud.net/imagesall/019623bd-3d0b-7dc2-8a1f-f782adeb42b4
+        type: string
+      price:
+        description: "url is added after publication\nURL             string    \t\t\t`json:\"url\"
+          validate:\"required\" example:\"https://storage.yandexcloud.net/mp3beats/019623bd-3d0b-7dc2-8a1f-f782adeb42b4\"`"
+        example: 2999
+        type: integer
+      sent_to_moderation_at:
+        type: integer
+      status:
+        allOf:
+        - $ref: '#/definitions/entities.Status'
+        example: draft
+      tags:
+        description: many to many
+        items:
+          $ref: '#/definitions/entities.Tag'
+        type: array
+      timestamps:
+        description: a beat has many timestamps, but each timestamp has only one beat
+        items:
+          $ref: '#/definitions/entities.Timestamp'
+        type: array
+      updated_at:
+        type: integer
+    required:
+    - availableFiles
+    - beatmakerId
+    - bpm
+    - genres
+    - keynoteId
+    - moods
+    - name
+    - price
+    - tags
+    - timestamps
     type: object
   presenters.MetadataErrorResponse:
     description: presenters.MetadataErrorResponse
